# treinos

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
configs/: detectron2_config.yaml  presets.yaml  yolo_config.yaml
data/raw/: README.md
data/smoke/: README.md  annotations.json
scripts/: generate_smoke_data.py  inference.py  prepare_dataset.py  smoke_test.py
src/: train_detectron2.py  train_yolo.py
src/shared/: __init__.py  augmentation.py  checkpoints.py  dataset.py  device_config.py  evaluate.py  presets.py  utils.py  visualize.py
