[project]
name = "pc-150"
version = "0.1.0"
description = "Pipeline de detecção de objetos — PC-150 (Ubuntu 24 + RTX 4090)"
requires-python = ">=3.11"
readme = "README.md"

# Dependências base — instaladas via `uv sync`.
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "pycocotools>=2.0.7",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "torchcam>=0.4.0",
    "Pillow>=10.0.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
]

# ──────────────────────────────────────────────────────────────────
# Detectron2 é OPCIONAL e instalado separadamente porque depende de
# compilação contra o PyTorch/CUDA específicos do ambiente.
# Após `uv sync`, rode:
#
#   uv pip install 'git+https://github.com/facebookresearch/detectron2.git'
#
# No macOS (CPU only) use:
#   MACOSX_DEPLOYMENT_TARGET=10.9 CC=clang CXX=clang++ \
#   uv pip install 'git+https://github.com/facebookresearch/detectron2.git'
# ──────────────────────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
